commit fin journée du 12/08
