# src/gs-api/src/models/interventions-dto.ts
@@ -3,8 +3,8 @@ import { LigneInterventionDto } from './ligne-intervention-dto';
 export interface InterventionsDto {
   code?: string;
   commentaire?: string;
-  dateVente?: number;
+  dateIntervention?: number;
   id?: number;
   idEntreprise?: number;
-  ligneIntervention?: Array<LigneInterventionDto>;
+  ligneInterventions?: Array<LigneInterventionDto>;
 }
