# src/gs-api/src/models/ligne-intervention.ts
@@ -1,13 +1,13 @@
 /* tslint:disable */
 import { Produit } from './produit';
-import { Interventions } from './interventions'; 
+import { Interventions } from './interventions';
 export interface LigneIntervention {
   produit?: Produit;
   creationDate?: number;
   id?: number;
   idEntreprise?: number;
   lastModifiedDate?: number;
-  dateouvertureTicket?: number;
-  problematique?: string;
+  prixUnitaire?: number;
+  quantite?: number;
   intervention?: Interventions;
 }
